set(LLVM_LINK_COMPONENTS2 option)
llvm_map_components_to_libnames(llvm_libs2 ${LLVM_LINK_COMPONENTS2})
aux_source_directory(. smtd_src)
add_executable(smtd ${smtd_src})
add_dependencies(smtd libz3)
TARGET_LINK_LIBRARIES(smtd SMT SMTSupport ${llvm_libs2} ${Z3LinkOption})
TARGET_LINK_LIBRARIES(smtd libz3 gmp)
